Completed Deseeder, added Seed Enhancer. Added 3 recipes. Fixed machines facing.

--- a/src/main/resources/assets/cookify/lang/en_us.json
+++ b/src/main/resources/assets/cookify/lang/en_us.json
@@ -5,7 +5,7 @@
   "item.cookify.orange": "Orange",
   "item.cookify.mush_porcini": "Porcini Mushroom",
 
-  "block.cookify.testblock": "Test Block",
-  "block.cookify.deseeder": "Deseeder"
+  "block.cookify.deseeder": "Deseeder",
+  "block.cookify.seed_enhancer": "Seed Enhancer"
 }
 
