--- a/src/main/resources/assets/cookify/lang/en_us.json
+++ b/src/main/resources/assets/cookify/lang/en_us.json
@@ -6,6 +6,6 @@
   "item.cookify.mush_porcini": "Porcini Mushroom",
 
   "block.cookify.deseeder": "Deseeder",
-  "block.cookify.seed_enhancer": "Seed Enhancer"
+  "block.cookify.flora_reactor": "Flora Reactor"
 }
 
