Implemented InductionCookerBlock. Changed some textures

--- a/src/main/resources/assets/cookify/lang/en_us.json
+++ b/src/main/resources/assets/cookify/lang/en_us.json
@@ -14,6 +14,7 @@
 
 
   "block.cookify.deseeder": "Deseeder",
-  "block.cookify.flora_reactor": "Flora Reactor"
+  "block.cookify.flora_reactor": "Flora Reactor",
+  "block.cookify.inductioncooker": "Induction Cooker"
 }
 
